# project-1

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile
analytics-service/: .env.example  Cargo.toml  regexes.yaml
analytics-service/src/: db.rs  handlers.rs  main.rs  models.rs  processing.rs  state.rs
edge-worker/: .env.example  Cargo.toml  wrangler.toml
edge-worker/src/: lib.rs
edge-worker/test/: index.html
infra/: docker-compose.yml
infra/clickhouse/migrations/: 001_create_pageviews.sql
openspec/changes/privacy-analytics-saas/: design.md  proposal.md  tasks.md
openspec/changes/privacy-analytics-saas/specs/analytics-api/: spec.md
openspec/changes/privacy-analytics-saas/specs/analytics-dashboard/: spec.md
openspec/changes/privacy-analytics-saas/specs/event-processing/: spec.md
openspec/changes/privacy-analytics-saas/specs/marketing-site/: spec.md
openspec/changes/privacy-analytics-saas/specs/site-management/: spec.md
openspec/changes/privacy-analytics-saas/specs/tracking-pixel/: spec.md
openspec/changes/privacy-analytics-saas/specs/user-auth/: spec.md
