[package]
name = "analytics-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
blake3 = "1.8.5"
uaparser = "0.6.4"
chrono = {version = "0.4.44", features = ["serde"] }
clickhouse = { version = "0.15.0", features = ["rustls-tls"] }
url = "2.5.8"
anyhow = "1"
dotenvy = "0.15"
log = "0.4"